--- a/emilia/picom/picom.conf
+++ b/emilia/picom/picom.conf
@@ -70,14 +70,14 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
-fade-in-step = 0.1
+fade-in-step = 0.03;
 # fade-in-step = 0.03;
 
 # Opacity change between steps while fading out. (0.01 - 1.0, defaults to 0.03)
- fade-out-step = 0.1
+ fade-out-step = 0.03;
 # fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
@@ -132,7 +132,8 @@ active-opacity = 0.98
 #
  opacity-rule = [
 	"100:class_g = 'explorer.exe' && focused",
-	"80:class_g = 'Rofi'"
+	"80:class_g = 'Rofi'",
+	"100:class_g = 'firefox'"
 ];
 
 
