--- a/emilia/polybar/bars.ini
+++ b/emilia/polybar/bars.ini
@@ -2,27 +2,27 @@
 fill = ﭳ
 empty = ﭳ
 indicator = 
-width = 6
+width = 7
 format = %{T7}%fill%%indicator%%empty%%{F-}%{T-}
 
 [module/volume]
-type = internal/alsa
+type = internal/pulseaudio
 
 ; Soundcard to be used
 ; Usually in the format hw:# where # is the card number
 ; You can find the different card numbers in `/proc/asound/cards`
-master-soundcard = default
-speaker-soundcard = default
-headphone-soundcard = default
+;master-soundcard = default
+;speaker-soundcard = default
+;headphone-soundcard = default
 ; $ amixer scontrols | sed -nr "s/.*'([[:alnum:]]+)'.*/\1/p"
 ; If master, speaker or headphone-soundcard isn't the default, 
 ; use `amixer -c # scontrols` instead where # is the number 
 ; of the master, speaker or headphone soundcard respectively
 ;
 ; Default: Master
-master-mixer = Master
+;master-mixer = Master
 
-interval = 10
+interval = 20
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -42,7 +42,7 @@ format-volume-padding = 1
 
 ; Available tokens:
 ;   %percentage% (default
-label-muted = "%{T7}ﭳﭳﭳﭳﭳ"
+label-muted = "%{T7}ﭳﭳﭳﭳﭳﭳ"
 label-muted-foreground = ${colors.gray}
 label-muted-padding = 1
 
@@ -55,11 +55,11 @@ bar-volume-indicator = ${bar.indicator}
 bar-volume-indicator-foreground = ${colors.yellow}
 
 bar-volume-fill = ${bar.fill}
-bar-volume-fill-foreground-0 = ${colors.green}
-bar-volume-foreground-1 = ${colors.green}
-bar-volume-foreground-2 = ${colors.yellow}
-bar-volume-foreground-3 = ${colors.yellow}
-bar-volume-foreground-4 = ${colors.red}
+bar-volume-foreground-0 = ${colors.sig_yellow_0}
+bar-volume-foreground-1 = ${colors.sig_yellow_1}
+bar-volume-foreground-2 = ${colors.sig_yellow_2}
+bar-volume-foreground-3 = ${colors.sig_yellow_3}
+bar-volume-foreground-4 = ${colors.sig_yellow_4}
 bar-volume-fill-foreground = ${colors.yellow}
 
 bar-volume-empty = ${bar.empty}
