--- a/emilia/polybar/colors.ini
+++ b/emilia/polybar/colors.ini
@@ -19,3 +19,8 @@ red = #ff7370
 green = #43a047
 yellow = #fff075
 gray = #787878
+sig_yellow_0 = #fff075 
+sig_yellow_1 = #fff675
+sig_yellow_2 = #fffc37
+sig_yellow_3 = #ffb175
+sig_yellow_4 = #ff9575
