--- a/emilia/polybar/config.ini
+++ b/emilia/polybar/config.ini
@@ -56,7 +56,7 @@ cursor-scroll = ns-resize
 inherit = bar/main
 top = true
 width = 100%
-height = 30pt
+height = 4%
 radius = 0
 padding-right = 2
 padding-left = 2
@@ -73,7 +73,7 @@ modules-right = pulseaudio-control volume network date
 inherit = bar/main
 bottom = true
 width = 100%
-height = 20pt
+height = 3%
 radius = 0
 
 separator = ""
