--- a/emilia/polybar/modules.ini
+++ b/emilia/polybar/modules.ini
@@ -50,8 +50,8 @@ exec = pulseaudio-control --icons-volume ",," --icon-muted "" --sink
 click-middle = exec pavucontrol &
 click-left = pulseaudio-control togmute
 click-right = pulseaudio-control next-sink
-scroll-up = pulseaudio-control --volume-max 130 --volume-step 10 up
-scroll-down = pulseaudio-control --volume-max 130 --volume-step 10 down
+scroll-up = pulseaudio-control --volume-max 100 --volume-step 20 up
+scroll-down = pulseaudio-control --volume-max 100 --volume-step 20 down
 
 [module/spotify]
 type = custom/script
@@ -80,8 +80,8 @@ click-left = playerctl next -p spotify
 
 [module/network]
 type = internal/network
-interface = wlp3s0
-interface-type = wireless
+interface = eno1
+interface-type = wired
 
 format-connected = %{A1:networkmanager_dmenu:}%{A}
 format-connected-foreground = ${colors.active}
